k8s/services/billing-engine/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-engine
  namespace: shopno-payments
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: billing-engine
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%

  template:
    metadata:
      labels:
        app.kubernetes.io/name: billing-engine

    spec:
      containers:
      - name: billing-engine
        image: ghcr.io/asaduzzamanbheramara-prog/shopnoltd-billing-engine:v6
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 5000

        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"

          limits:
            cpu: "750m"
            memory: "768Mi"

        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 20
          periodSeconds: 15
          timeoutSeconds: 8
          failureThreshold: 6

        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 5
