k8s/services/billing-engine/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: billing-engine
  namespace: shopno-payments
  labels:
    app.kubernetes.io/name: billing-engine
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: billing-engine
